--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Django
-djangorestframework
+Django==3.2.20
+djongo==1.3.6
+djangorestframework==3.14.0
+pymongo==3.12.3
 rest_framework_simplejwt
 psycopg2-binary
 django-cors-headers
