--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==3.2.20
 djongo==1.3.6
 djangorestframework==3.14.0
 pymongo==3.12.3
+whitenoise==5.3.0
 rest_framework_simplejwt
 psycopg2-binary
 django-cors-headers
